--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 bin
 gen
+CroutonDemo
 fancycoverflow_library
 Jnitest
+ImageCropperLib
 library_bluetooth
+library_crouton
 library_xUtils
 MainActivity
 miaojiankang2
@@ -16,6 +19,7 @@ Topsky_KKOL
 Topsky_KKOL_Base
 Topsky_KKOL_Devices
 Topsky_KKOL_Librarys
+Topsky_KKOL_Member
 Topsky_KKOL_SHEQU
 Topsky_KKOL_URION
 Topsky_KKOL_YiShengZiXun
