--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,6 @@ Topsky_KKOL_YiShengZiXun
 Topsky_KKOL_ZICE
 universal_image_loader_library
 PullToRefreshLibrary
+InitActivity
+QuickNews
 .metadata
